# prod_project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
docs/: clang-tidy-integration.md  clang_format_integration_report.md  clang_tidy_integration.md  code-formatting.md  code_formatting.md  perf-usage-guide.md  project-build.md  project_build.md  sanitizers-guide.md  sanitizers_guide.md  sanitizers_guide_zh.md  third_party_build.md
scripts/: build_llvm_tools.sh  build_project.sh  format_project.sh  generate_flamegraph.sh  pack_project.sh  perf_usage_guide_zh.md  quality_gate.sh  static_analysis.sh
src/integrated_demo/: CMakeLists.txt
src/integrated_demo/config/: request.json  server.yaml
src/integrated_demo/include/integrated_demo/: AppConfig.h  Logging.h  RestServer.h
src/integrated_demo/src/: AppConfig.cpp  Logging.cpp  RestServer.cpp  client_main.cpp  server_main.cpp
src/integrated_demo/tests/: catch2_main.cpp  test_main.cpp
src/performance/: perf_demo.cpp
src/sanitizers/asan/: asan_test.cpp
src/sanitizers/tsan/: tsan_test.cpp
src/sanitizers/ubsan/: ubsan_test.cpp
src/verify_find_package/: CMakeLists.txt
src/verify_find_package/src/: verify_catch2.cpp  verify_link.cpp
